# SudoCV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  game.txt  sudo.cpp  sudocv  vision
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game.txt  game3.txt  game5.txt  sudo.cpp  sudocv
cpp/utils/: cache.cpp
java/: Makefile  build.gradle
java/src/main/java/: Main.java
java/src/main/java/sudocv/: Cache.java  Sudo.java
java/src/main/java/sudocv/areas/: Area.java  Block.java  Column.java  Position.java  Row.java
java/src/main/java/sudocv/exceptions/: NoPosibleMovesException.java  NoPossibleMovesException.java
java/src/test/java/: CacheAddTest.java  CacheDelTest.java
java/test_data/: game2.txt
utils/: cache.cpp  cache.h
